# psd-great

./: .gitignore  Adobe Photoshop File Formats Specification.html  Cargo.toml  README.md  TASK_COMPLETION.md  TASK_COMPLETION_TYPES.md
examples/: basic_usage.rs  create_psd.rs  export_flattened_png.rs  extract_layers.rs  modify_psd.rs  read_psd.rs
rust-port/: Cargo.toml  PORTING_NOTES.md  PORTING_SUMMARY.md
rust-port/examples/: basic_usage.rs  create_psd.rs  extract_layers.rs  modify_psd.rs  read_psd.rs
rust-port/src/: README.md  abr.rs  additional_info.rs  adjustments.rs  ase.rs  binrw_support.rs  compression.rs  csh.rs  descriptor.rs  document_resource_postprocess.rs  effects.rs  effects_helpers.rs  engine_data.rs  error.rs  helpers.rs  image_resources.rs  jpeg.rs  layer.rs  lib.rs  psd.rs  reader.rs  text.rs  types.rs  utf8.rs  writer.rs
rust-port/tests/: integration_test.rs  ts_parity_test.rs
src/: README.md  additional_info.rs  adjustments.rs  binrw_support.rs  compression.rs  descriptor.rs  document_resource_postprocess.rs  effects.rs  effects_helpers.rs  engine_data.rs  error.rs  helpers.rs  image_resources.rs  layer.rs  lib.rs  psd.rs  reader.rs  text.rs  types.rs  writer.rs
src/api/: adjustments.rs  effects.rs  layer.rs  mod.rs  psd.rs  text.rs  types.rs
src/format/: additional_info.rs  document_resource_postprocess.rs  image_resources.rs  mod.rs
src/formats/: abr.rs  ase.rs  csh.rs  mod.rs
src/io/: mod.rs  reader.rs  writer.rs
src/support/: binrw_support.rs  compression.rs  descriptor.rs  jpeg.rs  (+4 more)
tests/: integration_test.rs  ts_parity_test.rs
(+34 files in other folders)
