[package]
name = "psd-great"
version = "30.1.0"
edition = "2021"
authors = ["Rust Port Contributors"]
description = "Rust library for reading and writing PSD files (Photoshop Document files)"
license = "MIT"
repository = "https://github.com/ioma8/psd-great"
keywords = ["psd", "photoshop", "image", "graphics"]
categories = ["multimedia::images", "parser-implementations"]

[dependencies]
# Compression support (equivalent to pako in JS)
flate2 = "1.0"
# Base64 encoding (equivalent to base64-js)
base64 = "0.22"
# JPEG support
jpeg-decoder = "0.3"
# Error handling
thiserror = "2.0"
# Byte order handling
byteorder = "1.5"
binrw = "0.15"
bitflags = "2.11"
quick-xml = "0.40"
# Lazy static for static hashmaps
lazy_static = "1.4"

[dev-dependencies]
# Testing utilities
criterion = "0.5"
pretty_assertions = "1.4"
